--- a/src/beispiel/browser/css/beispiel.css
+++ b/src/beispiel/browser/css/beispiel.css
@@ -1,3 +1,5 @@
+/* css adaptations for the 'archiv des beispiels' application */
+
 #header {
     color: #649600;
 }
@@ -12,6 +14,13 @@
     margin-left: 20px;
     font-size: 1.5em;
     font-weight: 500;
+}
+
+#header a,
+#header a:hover,
+#header a:visited {
+    color: #649600;
+    text-decoration: none;
 }
 
 /*
