--- a/src/beispiel/browser/css/beispiel.css
+++ b/src/beispiel/browser/css/beispiel.css
@@ -31,3 +31,16 @@
     background-color:#649600;
 }
 */
+
+.frontpage-provider {
+    /*border:1px solid red;*/
+}
+
+.frontpage-provider div {
+    margin-bottom: 10px;
+    /*border:1px solid green;*/
+    border-bottom:1px solid #a9bcd5;
+}
+.frontpage-provider div div {
+    border: none;
+}
