--- a/src/beispiel/browser/css/beispiel.css
+++ b/src/beispiel/browser/css/beispiel.css
@@ -37,6 +37,7 @@
     margin-bottom: 10px;
     border-bottom:1px solid #a9bcd5;
 }
+.frontpage-provider div:last-child,
 .frontpage-provider div div {
     border: none;
 }
